--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -34,7 +34,7 @@ body {
     font-size: 20px;
 }
 
-/* Replaced div ul with section il */
+/* Replaced div ul with section ul */
 
 .header section ul {
     list-style-type: none;
