Consolidate classes to show less. Add comments on CSS page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-/* Replaced div with section */
+
 
 .header section {
     padding-top: 15px;
@@ -34,23 +34,27 @@ body {
     font-size: 20px;
 }
 
-/* Replaced div ul with section ul */
+
 
 .header section ul {
     list-style-type: none;
 }
 
-/* Replaced div ul li with section ul li */
+
 
 .header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* below is the style for all links */
+
 a {
     color: #ffffff;
     text-decoration: none;
 }
+
+/* below is the font rule for all p tags */
 
 p {
     font-size: 16px;
@@ -75,6 +79,8 @@ p {
     margin-left: 25px;
 }
 
+/* below is the style for all content within content class */
+
 .content {
     width: 75%;
     display: inline-block;
@@ -92,55 +98,31 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* below is the style for all content withing benefit class */
+
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
+/* below is the style for all content inside the h3 tag for the benefit class */
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+/* below is the style for all images in the benefit class */
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/* below are the style rules for all content within the main-content class */
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.main-content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -149,50 +131,20 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+/* below is the style for all images in the main-content class */
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.main-content img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
+/* below is the style rule for all content within the main-content second heading */
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.main-content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* below is the styling for the contents in the footer tag */
 
 .footer {
     padding: 30px;
@@ -200,6 +152,8 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+
+/* below is the font size for everuthing in the heading 2 of the footer */
 
 .footer h2 {
     font-size: 20px;
